Work around with HTTPSE breaking ruleset format changes
- Update preloadHTTPSE.js
- Update package.json
- Bump version in package.json to 6.0.0
- Update scripts/preloadHTTPSE.json
- Update to HTTPS Everywhere 2018.1.29
- Changes as per npm  run lint
- Update scripts/preloadHTTPSE.js
- Simplify HTTPSE.json schema
- Update package-lock.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "https-everywhere-builder",
-  "version": "5.2.21",
+  "version": "6.0.0",
   "description": "https everywhere ruleset builder for Brave",
   "devDependencies": {
     "commander": "^2.11.0",
     "level": "^1.7.0",
     "nsp": "^2.8.1",
     "s3": "^4.4.0",
-    "standard": "^10.0.3",
-    "xml2js": "^0.4.19"
+    "standard": "^10.0.3"
   },
   "scripts": {
     "build": "node scripts/preloadHTTPSE.js",
