--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "https-everywhere-builder",
   "version": "6.0.0",
   "description": "https everywhere ruleset builder for Brave",
-  "devDependencies": {
+  "dependencies": {
     "commander": "^2.11.0",
     "level": "^5.0.1",
-    "s3-client": "^4.4.2",
+    "s3-client": "^4.4.2"
+  },
+  "devDependencies": {
     "standard": "^12.0.1"
   },
   "scripts": {
