--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "commander": "^2.11.0",
     "level": "^5.0.1",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "s3-client": "^4.4.2"
   },
   "devDependencies": {
